# txt2sd

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
tests/: test_coqui_w_ref.py  test_one_page.py  test_one_page_video.py
